add two changes and CKEditor endless work

--- a/config/packages/easy_admin.yaml
+++ b/config/packages/easy_admin.yaml
@@ -9,7 +9,7 @@ easy_admin:
             class: App\Entity\News
             form:
                 fields:
-                    - {property: 'description', type: 'fos_ckeditor'}
+                    - {property: 'description', type: 'fos_ck_editor'}
                     - {property: 'content', type: 'fos_ckeditor'}
         Tag:
             class: App\Entity\Tag
