--- a/config/packages/fos_ckeditor.yaml
+++ b/config/packages/fos_ckeditor.yaml
@@ -1,5 +1,8 @@
 # Read the documentation: https://symfony.com/doc/current/bundles/FOSCKEditorBundle/index.html
-
+fos_ck_editor:
+  configs:
+    tim_config:
+      toolbar: standard
 twig:
     form_themes:
         - '@FOSCKEditor/Form/ckeditor_widget.html.twig'
