--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
 		"php": ">=7.2.5",
 		"ext-ctype": "*",
 		"ext-iconv": "*",
+		"ckfinder/ckfinder-symfony-bundle": "3.5.1.5",
 		"composer/package-versions-deprecated": "1.11.99.1",
 		"doctrine/annotations": "^1.0",
 		"doctrine/doctrine-bundle": "^2.2",
